--- a/publications/2017-periodic-split-method-learning-more-readable-decision-trees-for-human-activities/bibtex.bib
+++ b/publications/2017-periodic-split-method-learning-more-readable-decision-trees-for-human-activities/bibtex.bib
@@ -1,7 +1,13 @@
-@ARTICLE {,
-  author    = "Matthieu Boussard, Clodéric Mars, Rémi Dès, Caroline Chopinaud",
-  title     = "Periodic split method: learning more readable decision trees for human activities",
-  journal   = "Actes des 3e Conférence Nationale sur les Applications Pratiques de l'Intelligence Artificielle (APIA 2017)",
-  year      = "2017",
-  abstract  = "Placing your trust in algorithms is a major issue in society today. This article introduces a novel split method for decision tree generation algorithms aimed at improving the quality/readability ratio of generated decision trees. We focus on human activities learning that allow the definition of new temporal features. By virtue of these features, we present here the periodic split method, which produces similar or superior quality trees with reduced tree depth."
+@inproceedings{boussard:hal-01561514,
+  title       = {{Periodic split method: learning more readable decision trees for human activities }},
+  author      = {Boussard, Matthieu and Mars, Clod{\'e}ric and D{\`e}s, R{\'e}mi and Chopinaud, Caroline},
+  abstract    = "Placing your trust in algorithms is a major issue in society today. This article introduces a novel split method for decision tree generation algorithms aimed at improving the quality/readability ratio of generated decision trees. We focus on human activities learning that allow the definition of new temporal features. By virtue of these features, we present here the periodic split method, which produces similar or superior quality trees with reduced tree depth.",
+  url         = {https://hal.archives-ouvertes.fr/hal-01561514},
+  booktitle   = {{Conf{\'e}rence Nationale sur les Applications Pratiques de l'Intelligence Artificielle}},
+  address     = {Caen, France},
+  year        = {2017},
+  month       = Jul,
+  pdf         = {https://hal.archives-ouvertes.fr/hal-01561514/file/APIA_2017_paper_18.pdf},
+  hal_id      = {hal-01561514},
+  hal_version = {v1},
 }
