fix bibtex AALTD entry

--- a/publications/2019-periodicity-detection/bibtex.bib
+++ b/publications/2019-periodicity-detection/bibtex.bib
@@ -1,4 +1,4 @@
-@Inbook{LerouxetAlICTAI2018,
+@Inbook{PuechetAlAALTD2019,
   author    = "Tom Puech and Matthieu Boussard and Anthony D'Amato and Gaëtan Millerand",
   title     = "A fully automated periodicity detection in time series",
   bookTitle = "Proceedings of the 4th Workshop on Advanced Analytics and Learning on Temporal Data (AALTD @ECMLPKDD 2019)",
